update css for replaceFormat (cps003f)

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/f/cps003.f.style.css
@@ -86,7 +86,7 @@
 #contents-area .stime-group-box .ntsRadioBox,
 #contents-area .number-group-box .ntsRadioBox,
 #contents-area .selection-group-box .ntsRadioBox {
-	display: block;
+	display: table;
 	line-height: 37px;
 }
 
