--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/i/index.xhtml
@@ -22,7 +22,7 @@
 
                 </div>
                 <hr/>
-                <table id="grid" tabindex="2" />
+                <table id="I2_1" tabindex="2" />
             </div>
         </div>
 
