--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/g/index.xhtml
@@ -55,11 +55,12 @@
                                             constraint: constraint,
                                             option: {
                                                 width: '110px',
-				                                decimallength: 2
+				                                decimallength: decimalLength
                                             },
                                             name: 'お試し計算値',
-                                            required: true}"
-                                        />
+                                            required: true,
+                                            readonly: readonly
+                                        }"/>
                                     </td>
                                 </tr>
                                 </tbody>
