--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/035/a/index.xhtml
@@ -111,7 +111,7 @@
                         <div class="flex valign-center">
                             <div id="A4_14" class="column-1"
                                  data-bind="ntsFormLabel: { constraint: '', required: false }">#{i18n.getText('QMM035_20')}</div>
-                            <button id="A4_15" class="small" tabindex="14" data-bind="click: $parent.findDep " >#{i18n.getText('QMM035_21')}</button>
+                            <button id="A4_15" class="small" tabindex="14" data-bind="click: $parent.findDep, enable: false" >#{i18n.getText('QMM035_21')}</button>
                             <span id ="A4_16" style="margin-left: 15px;" data-bind = "text: depCode" ></span>
                             <span id ="A4_17" style="margin-left: 15px;" data-bind = "text: depName"></span>
 
