--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -1,8 +1,8 @@
 <div>
-    <div class="functions-area sidebar-content-header flex" style = "min-width: 1000px;">
+    <div class="sidebar-content-header" style = "min-width: 1000px;">
 
         <div id="A">
-            <span style="position: absolute;margin-left: -40px;font-size: 25px;">#{i18n.getText('QMM020_7')}</span>
+            <span class="title">#{i18n.getText('QMM020_7')}</span>
             <button style="margin-left: 48px" id="A1_1" tabindex="1" class="proceed"
                     data-bind="click: registerStateCorrelationHisDeparment, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
             <button id="A1_3" tabindex="3"
