--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -1,7 +1,7 @@
 <div>
     <div class="sidebar-content-header" style = "min-width: 1000px;">
 
-            <span class = "title" style="margin-left: 4px;font-size: 25px;">#{i18n.getText('QMM020_11')}</span>
+            <span class = "title">#{i18n.getText('QMM020_11')}</span>
             <button id="A1_1" tabindex="2" class="proceed"
                     data-bind="click: registerHisIndividual, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
