--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/qmm019.c.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/qmm019.c.style.css
@@ -26,7 +26,7 @@
 }
 
 #C1_7 .ntsRadioBox:first-child {
-    margin-bottom: 15px;
+    margin-bottom: 17px;
 }
 
 #C1_10 {
@@ -43,4 +43,8 @@
 
 #right-item {
     width: 350px;
+}
+
+#right-item .control-group:first-child {
+    margin-bottom: 14px;
 }
