--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/g/index.xhtml
@@ -12,6 +12,7 @@
                 width: 1250,
                 height: 670
             };
+            var autoResize = false;
         </script>
         <com:scriptfile set="IGNITE"/>
         <com:stylefile path="../share/qmm019.d-g.style.css"/>
