--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -1,6 +1,6 @@
 <div>
     <div class="sidebar-content-header " style = "min-width: 1000px;">
-            <span id ="title_G" class = "title">#{i18n.getText('QMM020_10')}</span>
+            <span class = "title">#{i18n.getText('QMM020_10')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
                     data-bind="click: registerSalary, enable: !enableRegis() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
