--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
@@ -74,7 +74,7 @@
         </ul>
         <div class="divider"></div>
         <span>#{i18n.getText('QMM020_12')}</span>
-        <button data-bind="ntsHelpButton: {image: '../resources/QMM020_01.png',position: 'bottom left', enable: true }">？</button>
+        <button tabindex="-1" data-bind="ntsHelpButton: {image: '../resources/QMM020_01.png',position: 'bottom left', enable: true }">？</button>
     </ui:define>
     <ui:define name="sidebar-content">
         <div id="tabpanel-1" role="tabpanel" data-bind="with: viewmodelB">
