--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/g/kal004.g.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/g/kal004.g.style.css
@@ -97,3 +97,23 @@ hr {
 	margin-top: 10px;
 	margin-left: 30px;
 }
+
+/* tab6 */
+.comboboxMonth6 {
+	width: 100px;
+}
+
+#start-tab-6{
+	margin-top: 40px;
+    margin-left: 70px;
+
+}
+#startLabel{
+	margin-top: 30px;
+	margin-left: 35px;
+}
+#tab-6{
+	height: 250px;	
+}
+
+
