--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/index.xhtml
@@ -31,7 +31,7 @@
 									  selectedKey: 'statementCode',
 									   fields: ['statementCode', 'statementName'],
 									    mode: 'igGrid'}"/>
-                    <table tabindex="2" id="multi-list" data-bind="ntsGridList: {
+                    <table tabindex="2" id="single-list" data-bind="ntsGridList: {
 										height: 232,
 										options: items,
 										optionsValue: 'statementCode',
