--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/a/index.xhtml
@@ -69,10 +69,10 @@
                    role="tab-navigator">#{i18n.getText('QMM020_10')}</a></li>
             <li data-bind="click: $vm.viewmodelA.onSelectTabH"><a tabindex="-1" href="#tabpanel-3"
                    role="tab-navigator">#{i18n.getText('QMM020_11')}</a></li>
-            <li data-bind="click: $vm.viewmodelA.onSelectTabI"><a tabindex="-1" href="#tabpanel-4"
+            <li style="margin-bottom: 40px" data-bind="click: $vm.viewmodelA.onSelectTabI"><a tabindex="-1" href="#tabpanel-4"
                    role="tab-navigator">#{i18n.getText('QMM020_83')}</a></li>
         </ul>
-        <div class="divider"></div>
+        <div class="divider" style="margin-bottom: 20px"></div>
         <span>#{i18n.getText('QMM020_12')}</span>
         <button tabindex="-1" data-bind="ntsHelpButton: {image: '../resources/QMM020_01.png',position: 'bottom left', enable: true }">？</button>
     </ui:define>
