--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/m/index.xhtml
@@ -26,7 +26,7 @@
             <div class="cf" style="margin: 15px 0px 0px 30px;">
                 <div tabindex="1" style="height: 30px;width: 280px" data-bind="ntsSearchBox: {searchMode: 'highlight',
                     targetKey: 'statementCode',
-                     comId: 'multi-list',
+                     comId: 'single-list',
 									items: items,
 									  selectedKey: 'statementCode',
 									   fields: ['statementCode', 'statementName'],
