--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
@@ -39,8 +39,8 @@
                     <div style="margin-top: 15px; margin-left: 150px;" class="flex valign-center">
                         <div style="width: 50px;display: inline-block;margin-left: 35px;"
                              data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM039_23')}</div>
-                        <div tabindex="2" data-bind="ntsDatePicker: {value: yearMonthStart, dateFormat: 'yearmonth',required: true,name : '#[QMM008_197]', enable: modifyMethod() == 1}"/>
-                        <span style="padding-left: 5px; padding-right: 5px"> ~  </span>
+                        <div id="C1_8" tabindex="2" data-bind="ntsDatePicker: {value: yearMonthStart, dateFormat: 'yearmonth',required: true,name : '#[QMM008_197]', enable: modifyMethod() == 1}"/>
+                        <span style="padding-left: 5px; padding-right: 5px"> ～ </span>
                         <span data-bind="text: yearMonthEnd()"/>
                     </div>
                 </div>
