--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -150,6 +150,12 @@
 							<div class="tab-content-8" data-bind="with: tabAgreementHour">
 								<ui:include src="agreement/agreementhour/agreementhour.xhtml" />
 							</div>
+							<div class="tab-content-9">
+								<ui:include src="agreement/agreementhour/agreementhour.xhtml" />
+							</div>
+							<div class="tab-content-10">
+								<ui:include src="agreement/agreementhour/agreementhour.xhtml" />
+							</div>
 						</div>
 					</div>
 				</div>
