--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -36,7 +36,7 @@
 				<!-- Mode Application -->
 				<!-- CCG_001 -->
 				<div id="ccgcomponent"></div>
-				<div class="control-group table" style ="margin-top: 10px; margin-left: 20px">
+				    <div class="control-group table" style ="margin-top: 10px; margin-left: 20px; display:none" data-bind = "visible: true">
 					<!-- A3 -->
 					<div class = "cell" style = "width: 150px;">
 						<div data-bind = "visible: mode()==1">
