KMK008: update css and primitive AgreementOneMonthTime, add comment code

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/b/index.xhtml
@@ -30,6 +30,7 @@
 					nts.uk.ctx.at.record.dom.standardtime.primitivevalue.ErrorOneYear
 					nts.uk.ctx.at.record.dom.standardtime.primitivevalue.AlarmOneYear
 					nts.uk.ctx.at.record.dom.standardtime.primitivevalue.LimitOneYear
+					nts.uk.ctx.at.record.dom.standardtime.primitivevalue.AgreementOneMonthTime
 			</com:ValidatorScript>
 
 			<com:scriptfile set="IGNITE" />
@@ -48,7 +49,6 @@
 			<com:scriptfile path="../d/kmk008.d.vm.js" />
 			<com:scriptfile path="../d/kmk008.d.service.js" />
 			
-			<com:stylefile path="../e/kmk008.e.main.css" />
 			<com:scriptfile path="../e/kmk008.e.vm.js" />
 			<com:scriptfile path="../e/kmk008.e.service.js" />
 
