--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/b/kmk008.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/b/kmk008.b.main.css
@@ -20,7 +20,7 @@
 }
 
 .tabpanel-1-contents-area-left {
-	width: 450px;
+	width: 440px;
 	margin-left: 40px;
 	margin-top: 20px;
 	float: left;
@@ -61,4 +61,17 @@
 
 .lbl-title-employeer-name>div {
 	margin-right: 20px;
+}
+
+.mt10 {
+	margin-top: 10px
+}
+
+.upperMonth{
+	margin-left: 20px;
+	margin-bottom: 10px
+}
+
+.upperMonth *{
+	vertical-align: middle;
 }
