--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -101,6 +101,10 @@ td.required {
 	background-color: #FAC002 !important;
 }
 
+td.red-color {
+	color: #FF0000;
+}
+
 tr.blue-color {
-	color: blue;
+	color: #0000FF;
 }
