--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/f/index.xhtml
@@ -3,7 +3,12 @@
             <span class="title">#{i18n.getText('QMM020_9')}</span>
             <button id="A1_1" tabindex="1" class="proceed" style="margin-left: 80px"
                     data-bind="click: registerPosition, enable: !enableRegis() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
+        <button id="A1_3" tabindex="3"
+                data-bind="click: $vm.viewmodelA.openScreenL, enable: true">#{i18n.getText('QMM020_3')}</button>
 
+
+        <button id="A1_4" tabindex="4"
+                data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
     </div>
     <div style="margin-top: 27px;" class="contents-area fixed-flex-layout">
         <div class="fixed-flex-layout-left" style="margin-left: 20px; margin-right: 10px;">
@@ -13,12 +18,12 @@
             <div data-bind="ntsPanel:{width: '200px', height: '220px', direction: 'right', showIcon: false, visible: true}">
 
                 <div>
-                    <button id="F1_3" tabindex="2" data-bind="click: openJScreen, timeClick: 800, enable: enableNew() ">#{i18n.getText('QMM020_13')}</button>
-                    <button id="F1_4" tabindex="3" data-bind="click: openKScreen, timeClick: 800, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="F1_3" tabindex="5" data-bind="click: openJScreen, timeClick: 800, enable: enableNew() ">#{i18n.getText('QMM020_13')}</button>
+                    <button id="F1_4" tabindex="6" data-bind="click: openKScreen, timeClick: 800, enable: enableEdit()" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div >
-                    <table  id="F1_5" tabindex="4" data-bind="ntsGridList: {
+                    <table  id="F1_5" tabindex="7" data-bind="ntsGridList: {
                                             name: '#QMM020_37',
                                             height: 165,
                                             rows:6,
@@ -47,7 +52,7 @@
             </div>
 
             <div>
-                <div id="F2_5" style="width: 260px" tabindex="5"  data-bind =
+                <div id="F2_5" style="width: 260px" tabindex="8"  data-bind =
                         "ntsSearchBox: {
                         targetKey: 'id',
                         comId: 'F3_1',
