KWR008 ThanhPV Update code UI ver22

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/a/kwr008.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/a/kwr008.a.style.css
@@ -18,3 +18,4 @@ body .fixed-flex-layout-right {
 .form-label {
 	width: 220px;
 }
+.standardMonth{display: inline-block; position: relative; top: 2px; left: 5px;}
