--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/008/a/index.xhtml
@@ -20,6 +20,9 @@
 			<com:scriptfile path="kwr008.a.service.js" />
 			<com:scriptfile path="kwr008.a.vm.js" />
 			<com:scriptfile path="kwr008.a.start.js" />
+			<com:ValidatorScript>
+				nts.uk.ctx.sys.portal.dom.toppagepart.size.Height
+			</com:ValidatorScript>
 		</ui:define>
 
 		<ui:define name="content">
@@ -69,7 +72,23 @@
 	                    		required: true,
 	                    		showJumpButtons: true}"></div>
 	                    </div>
-					
+	                    
+	                    <!-- A11 -->
+						<div class="standardMonth" data-bind="visible: showStandardMonth() &amp;&amp; printFormat() == 1">
+							<span class="label">#{i18n.getText('KWR008_67')}</span>
+							<span data-bind="with: standardMonth"> 
+								<input id="" tabindex="5" data-bind="ntsNumberEditor: {
+									name:'#{i18n.getText('KWR008_67')}',
+									value: value,
+									constraint: constraint,
+									option: option,
+									required: required,
+									enable: enable,
+									readonly: readonly}" />
+							</span>
+							<span class="label">#{i18n.getText('KWR008_68')}</span>
+						</div>
+
 						<!-- A3 -->
 						<div data-bind="visible: printFormat() == 0" id="range-date" class="valign-center control-group ntsControl">
 							<!-- A3_1 -->
@@ -128,7 +147,7 @@
 						<!-- A10 -->
 	                    <div data-bind="visible: printFormat() == 1" class="valign-center control-group ntsControl">
 	                    	<div data-bind="ntsFormLabel: {required:true}">#{i18n.getText('KWR008_59')}</div>
-	                    	<div tabindex="3" data-bind="ntsSwitchButton: {
+	                    	<div tabindex="8" data-bind="ntsSwitchButton: {
 								name: '#[KWR008_59]',
 								options: listSheetExcludedEmp,
 								optionsValue: 'code',
