--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -43,7 +43,7 @@
             </div>
 
             <div>
-                <span id="D2_3" class="label with-image" style="margin-bottom: 10px;">
+                <span id="D2_3" class="label with-image" style="margin-bottom: 10px; min-width: 180px">
                     <i class="image image-calendar"/>
                     <span>#{i18n.getText('QMM020_30')}</span>
                 </span>
@@ -51,7 +51,7 @@
 
             <div>
                 <div style="width: 300px;margin-bottom: 0px;" data-bind="ntsSearchBox: {targetKey: 'departmentID', mode:'igTree', comId:'treegrid', items: items, selected: currentSelectedDep, selectedKey: 'departmentID', childField: 'childs', fields: ['departmentName', 'departmentID']}"></div>
-                <p class="halign-right" style="margin-right: 25px;margin-bottom: 10px;">#{i18n.getText('QMM020_31')}</p>
+                <p class="" style="margin-right: 25px;margin-bottom: 10px; margin-left: 465px;min-width: 750px">#{i18n.getText('QMM020_31')}</p>
 
                 <table id="treegrid" data-bind="ntsTreeGridView:{
                     width: 800,
